# pizh2311_ivanov

./: README.md
labwork2/lib/: number.cpp  number.h
labwork3/: CMakeLists.txt  input.tsv
labwork3/include/: bmp_writer.h  config.h  sandpile.h
labwork3/src/: bmp_writer.cpp  config.cpp  grid.cpp  sandpile.cpp
labwork5/: README.md
labwork5/lib/: ArgParser.h
labwork5/tests/: argparser_test.cpp
labwork6/: README.md
labwork6/lib/: parser.cpp  parser.h
labwork7/: README.md
labwork7/lib/: AudioParser.cpp  AudioParser.h  CMakeLists.txt
labwork7/tests/: CMakeLists.txt  test_parser.cpp
labwork8/: CMakeLists.txt  README.md
labwork8/lib/: CMakeLists.txt  bst.h
labwork8/tests/: CMakeLists.txt  test_bst.cpp
labwork9/: CMakeLists.txt  README.md
labwork9/lib/: CMakeLists.txt  adapters.h
labwork9/tests/: CMakeLists.txt  test_adapters.cpp
solid/VectorCollection/: README.md  interfaces.py  vector.py  vector_collection.py
solid/labwork1/: CMakeLists.txt  README.md
the_snake/: README.md  the_snake.py
week01/: lesson10.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py  lesson7.py  lesson8.py  readme.md
week01/lesson11/: main.py  module.py
week01/lesson9/: main.py  module.py
week02/: README.md  aircastle.py
week03/pizza/: README.md  main.py  order.py  pizza.py  terminal.py
week03/roman/: README.md  main.py  roman.py
week04/: readme.md
week04/Deposit/: deposit.py  main.py
week04/Vector/: main.py  vector.py
week05/: readme.md
week09/: README.md  main.cpp
week10/: README.md
week11/: CMakeLists.txt  README.md  input.tsv
(+20 files in other folders)
